# betatester

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  render.yaml
backend/: requirements.txt
backend/betatester/: betatester_types.py  model.py  server.py  utils.py
backend/betatester/file/: __init__.py  local.py
backend/betatester/routes/: data.py  scraper.py
backend/betatester/scraper/: execution.py  prompts.py
backend/betatester_web_service/: betatester_web_service_types.py  server.py  task_manager.py  utils.py
backend/betatester_web_service/db/: api.py  base.py
backend/betatester_web_service/db/mixins/: ScrapeParams.py  Timestamp.py  __init__.py
backend/betatester_web_service/db/models/: Config.py  TestEvents.py  __init__.py
backend/betatester_web_service/file/: __init__.py
backend/betatester_web_service/routes/: config.py  data.py  scraper.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts
frontend/src/: main.tsx  types.tsx
frontend/src/components/: DisplayUtils.tsx  Layout.tsx  Navbar.tsx  RunStartForm.tsx  RunView.tsx  TestConfigForm.tsx  TestHistoryView.tsx
frontend/src/routes/: Home.tsx  TestEvent.tsx
frontend/src/utils/: Ajax.ts  apiCalls.ts  date.ts
python_package/: README.md  pyproject.toml
python_package/src/betatester/: __init__.py  betatester_types.py  cli.py  execution.py  model.py  prompts.py
python_package/src/betatester/file/: local.py
