[project]
name = "betatester"
version = "0.0.0"
authors = [
  { name="Ihsaan Patel" },
]
description = "A package for automatically testing the UX / UI of a website."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "playwright",
  "pydantic",
]

[project.optional-dependencies]
local = ["aiofiles"]

[project.urls]
Homepage = "https://github.com/pateli18/betatester"
Issues = "https://github.com/pateli18/betatester/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true