[project]
name = "betatester"
version = "0.0.0"
authors = [
  { name="Ihsaan Patel" },
]
description = "A package for automatically testing the UX / UI of a website."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "playwright",
  "pydantic",
]

[project.optional-dependencies]
cli = ["typer"]
local = ["aiofiles"]

[project.scripts]
betatester = "betatester.cli:app"

[project.urls]
Homepage = "https://github.com/pateli18/betatester"
Issues = "https://github.com/pateli18/betatester/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true